Refactor PromptNGControllerTest to use parameterized tests
This commit refactors PromptNGControllerTest to utilize JUnit 5's parameterized tests.

Key changes:
- Introduced a @ParameterizedTest for the main scenarios of the judgePrompt endpoint, covering cases with no issues, sensitive information, prompt injection, and both.
- A @MethodSource method now provides test data, making it easier to add new similar test cases.
- Redundant individual test methods for these scenarios have been removed.
- Tests for bad request scenarios (empty/null input) remain as separate @Test methods due to their different assertion structure.
- Added `junit-jupiter-params` dependency to pom.xml to support parameterized tests.

This refactoring improves the maintainability and readability of the test suite for PromptNGController. All tests continue to pass after these changes.