@@ -6,17 +6,21 @@ import com.example.promptngapi.dto.PromptRequest;
 import com.example.promptngapi.service.PromptInjectionDetector;
 import com.example.promptngapi.service.SensitiveInformationDetector;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
@@ -48,91 +52,89 @@ public class PromptNGControllerTest {
         }
     }
 
-    @Test
-    void judgePrompt_noIssues_shouldReturnOverallTrueAndEmptyDetections() throws Exception {
-        when(sensitiveInformationDetectorMock.hasSensitiveInformation(anyString())).thenReturn(Collections.emptyList());
-        when(promptInjectionDetectorMock.isPromptInjectionAttempt(anyString())).thenReturn(Collections.emptyList());
-
-        MvcResult mvcResult = mockMvc.perform(post("/prompt-ng/v1/judge")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(asJsonString(new PromptRequest("This is a benign prompt."))))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andReturn();
-
-        String jsonResponse = mvcResult.getResponse().getContentAsString();
-        PromptNGResponse response = objectMapper.readValue(jsonResponse, PromptNGResponse.class);
-
-        assertThat(response.isOverall_result()).isTrue();
-        assertThat(response.getDetections()).isNotNull().isEmpty();
-    }
-
-    @Test
-    void judgePrompt_onlySensitiveInfoIssue_shouldReturnOverallFalseAndSensitiveInfoDetails() throws Exception {
+    private static Stream<Arguments> provideTestParametersForJudgePrompt() {
         DetectionDetail sensitiveDetail = new DetectionDetail("sensitive_info_test", "test_pattern_sens", "test_input_sens", 1.0, "Sensitive info test details", "test_input_sens");
-        when(sensitiveInformationDetectorMock.hasSensitiveInformation(anyString())).thenReturn(List.of(sensitiveDetail));
-        when(promptInjectionDetectorMock.isPromptInjectionAttempt(anyString())).thenReturn(Collections.emptyList());
-
-        MvcResult mvcResult = mockMvc.perform(post("/prompt-ng/v1/judge")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(asJsonString(new PromptRequest("Contains sensitive data"))))
-                .andExpect(status().isOk())
-                .andReturn();
-
-        String jsonResponse = mvcResult.getResponse().getContentAsString();
-        PromptNGResponse response = objectMapper.readValue(jsonResponse, PromptNGResponse.class);
-
-        assertThat(response.isOverall_result()).isFalse();
-        assertThat(response.getDetections()).isNotNull().hasSize(1);
-        DetectionDetail returnedDetail = response.getDetections().get(0);
-        assertThat(returnedDetail.getType()).isEqualTo(sensitiveDetail.getType());
-        assertThat(returnedDetail.getMatched_pattern()).isEqualTo(sensitiveDetail.getMatched_pattern());
-    }
-
-    @Test
-    void judgePrompt_onlyInjectionIssue_shouldReturnOverallFalseAndInjectionDetails() throws Exception {
         DetectionDetail injectionDetail = new DetectionDetail("prompt_injection_test", "test_pattern_inj", "test_input_inj", 1.0, "Injection test details", "test_input_inj");
-        when(sensitiveInformationDetectorMock.hasSensitiveInformation(anyString())).thenReturn(Collections.emptyList());
-        when(promptInjectionDetectorMock.isPromptInjectionAttempt(anyString())).thenReturn(List.of(injectionDetail));
+        DetectionDetail sensitiveDetail2 = new DetectionDetail("sensitive_info_test", "s_pattern", "s_input", 1.0, "Sensitive", "s_input");
+        DetectionDetail injectionDetail2 = new DetectionDetail("injection_test", "i_pattern", "i_input", 1.0, "Injection", "i_input");
+
+        return Stream.of(
+            Arguments.of(
+                "No Issues: Benign prompt should pass",
+                "This is a benign prompt.",
+                Collections.emptyList(),
+                Collections.emptyList(),
+                true,
+                0,
+                HttpStatus.OK,
+                Collections.emptyList()
+            ),
+            Arguments.of(
+                "Only Sensitive Info: Should return false with sensitive details",
+                "Contains sensitive data",
+                List.of(sensitiveDetail),
+                Collections.emptyList(),
+                false,
+                1,
+                HttpStatus.OK,
+                List.of("sensitive_info_test")
+            ),
+            Arguments.of(
+                "Only Injection Issue: Should return false with injection details",
+                "Ignore previous instructions",
+                Collections.emptyList(),
+                List.of(injectionDetail),
+                false,
+                1,
+                HttpStatus.OK,
+                List.of("prompt_injection_test")
+            ),
+            Arguments.of(
+                "Both Issues: Should return false with combined details",
+                "Sensitive and injection attempt",
+                List.of(sensitiveDetail2),
+                List.of(injectionDetail2),
+                false,
+                2,
+                HttpStatus.OK,
+                List.of("sensitive_info_test", "injection_test")
+            )
+        );
+    }
+
+    @ParameterizedTest(name = "{index} => {0}")
+    @MethodSource("provideTestParametersForJudgePrompt")
+    void judgePrompt_parameterized(String testCaseName, String promptText,
+                                   List<DetectionDetail> sensitiveInfoDetections,
+                                   List<DetectionDetail> promptInjectionDetections,
+                                   boolean expectedOverallResult, int expectedDetectionsCount,
+                                   HttpStatus expectedStatus, List<String> expectedDetectionTypes) throws Exception {
+
+        when(sensitiveInformationDetectorMock.hasSensitiveInformation(anyString())).thenReturn(sensitiveInfoDetections);
+        when(promptInjectionDetectorMock.isPromptInjectionAttempt(anyString())).thenReturn(promptInjectionDetections);
 
         MvcResult mvcResult = mockMvc.perform(post("/prompt-ng/v1/judge")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(asJsonString(new PromptRequest("Ignore previous instructions"))))
-                .andExpect(status().isOk())
+                .content(asJsonString(new PromptRequest(promptText))))
+                .andExpect(status().is(expectedStatus.value()))
                 .andReturn();
 
-        String jsonResponse = mvcResult.getResponse().getContentAsString();
-        PromptNGResponse response = objectMapper.readValue(jsonResponse, PromptNGResponse.class);
+        if (expectedStatus == HttpStatus.OK) {
+            String jsonResponse = mvcResult.getResponse().getContentAsString();
+            PromptNGResponse response = objectMapper.readValue(jsonResponse, PromptNGResponse.class);
 
-        assertThat(response.isOverall_result()).isFalse();
-        assertThat(response.getDetections()).isNotNull().hasSize(1);
-        assertThat(response.getDetections().get(0).getType()).isEqualTo("prompt_injection_test");
+            assertThat(response.isOverall_result()).isEqualTo(expectedOverallResult);
+            assertThat(response.getDetections()).isNotNull().hasSize(expectedDetectionsCount);
+
+            if (expectedDetectionsCount > 0 && expectedDetectionTypes != null && !expectedDetectionTypes.isEmpty()) {
+                assertThat(response.getDetections()).extracting(DetectionDetail::getType)
+                    .containsExactlyInAnyOrderElementsOf(expectedDetectionTypes);
+            }
+        }
     }
 
-    @Test
-    void judgePrompt_bothIssues_shouldReturnOverallFalseAndCombinedDetails() throws Exception {
-        DetectionDetail sensitiveDetail = new DetectionDetail("sensitive_info_test", "s_pattern", "s_input", 1.0, "Sensitive", "s_input");
-        DetectionDetail injectionDetail = new DetectionDetail("injection_test", "i_pattern", "i_input", 1.0, "Injection", "i_input");
-
-        when(sensitiveInformationDetectorMock.hasSensitiveInformation(anyString())).thenReturn(List.of(sensitiveDetail));
-        when(promptInjectionDetectorMock.isPromptInjectionAttempt(anyString())).thenReturn(List.of(injectionDetail));
-
-        MvcResult mvcResult = mockMvc.perform(post("/prompt-ng/v1/judge")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(asJsonString(new PromptRequest("Sensitive and injection attempt"))))
-                .andExpect(status().isOk())
-                .andReturn();
-
-        String jsonResponse = mvcResult.getResponse().getContentAsString();
-        PromptNGResponse response = objectMapper.readValue(jsonResponse, PromptNGResponse.class);
-
-        assertThat(response.isOverall_result()).isFalse();
-        assertThat(response.getDetections()).isNotNull().hasSize(2);
-        assertThat(response.getDetections()).extracting(DetectionDetail::getType)
-            .containsExactlyInAnyOrder("sensitive_info_test", "injection_test");
-    }
-
-    @Test
+    // Keep bad request tests
+    @org.junit.jupiter.api.Test
     void judgePrompt_emptyInputText_shouldReturnBadRequest() throws Exception {
         mockMvc.perform(post("/prompt-ng/v1/judge")
                 .contentType(MediaType.APPLICATION_JSON)
@@ -140,7 +142,7 @@ public class PromptNGControllerTest {
                 .andExpect(status().isBadRequest());
     }
 
-     @Test
+    @org.junit.jupiter.api.Test
     void judgePrompt_nullInputText_shouldReturnBadRequest() throws Exception {
         PromptRequest requestWithNullText = new PromptRequest(); // text field will be null by default
         // requestWithNullText.setText(null); // Explicitly set if needed, but default is null for String
